Correct javadoc tags, and re-format code